cria section de Aproveite 1 mes gratis de Premium

--- a/index.html
+++ b/index.html
@@ -17,5 +17,19 @@
             <li>Entrar</li>
         </ul>
     </div>
+
+    <section style="background-color: rgb(29, 177, 222);">
+<h1> Aproveite 1 mes gratis de Premium</h1>
+
+<h2> Depois, pague somente R$ 21,90/mes. Cancele quando quiser.</h2>
+
+<button>Comece Agora </button>
+<button>Ver Planos  </button>
+
+<p><a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e condicoes.</a>
+    O mes gratis nao esta disponivel para usuarios que ja experimentaram o Premium <p>
+
+    </section>
 </body>
+
 </html>
