--- a/index.html
+++ b/index.html
@@ -1,34 +1,44 @@
+
+
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <head>
-  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="stylesheet" href="style.css">
+  <title>Spotify Premium</title>
 </head>
 
-    <title>Spotify Premium</title>
-</head>
 <body>
-
-<!-- Cabeçalho -->
-<div style="background-color: black;">
-    <img width="150px" src="https://www.pngkey.com/png/full/190-1907978_spotify-logo-png-white-spotify-logo-white-transparent.png" alt="Spotify Logo">
-    <ul style="color: white;">
-        <li>Premium</li>
-        <li>Suporte</li>
-        <li>Baixar</li>
-        <li>Inscrever-se</li>
-        <li>Entrar</li>
+  <header>
+    <div>
+    <img class="spotify-logo" src="https://www.pngkey.com/png/full/190-1907978_spotify-logo-png-white-spotify-logo-white-transparent.png" alt="Spotify Logo">
+    <ul class="menu">
+      <li>Premium</li>
+      <li>Suporte</li>
+      <li>Baixar</li>
+      <li>Inscrever-se</li>
+      <li>Entrar</li>
     </ul>
-</div>
+      </div>
+  </header>
 
+</body>
+
+</html>
 <!-- Seção de Oferta -->
-<section style="background-color: rgb(29, 177, 222);">
+  <section style="background-color: rgb(29, 177, 222); text-align: center; padding: 20px;">
     <h1>Aproveite 1 mês grátis de Premium</h1>
     <h2>Depois, pague somente R$ 21,90/mês. Cancele quando quiser.</h2>
     <button>Comece Agora</button>
     <button>Ver Planos</button>
+  </section>
+
+</body>
+
+</html>
+
     <p>
         <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e condições.</a> 
         O mês grátis não está disponível para usuários que já experimentaram o Premium.
