--- a/index.html
+++ b/index.html
@@ -1,18 +1,17 @@
-
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-br">
 
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="style.css">
   <title>Spotify Premium</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
+
+  <!-- Cabeçalho -->
   <header>
-    <div>
     <img class="spotify-logo" src="https://www.pngkey.com/png/full/190-1907978_spotify-logo-png-white-spotify-logo-white-transparent.png" alt="Spotify Logo">
     <ul class="menu">
       <li>Premium</li>
@@ -21,29 +20,28 @@
       <li>Inscrever-se</li>
       <li>Entrar</li>
     </ul>
-      </div>
   </header>
 
-</body>
-
-</html>
-<!-- Seção de Oferta -->
-  <section style="background-color: rgb(29, 177, 222); text-align: center; padding: 20px;">
-    <h1>Aproveite 1 mês grátis de Premium</h1>
-    <h2>Depois, pague somente R$ 21,90/mês. Cancele quando quiser.</h2>
-    <button>Comece Agora</button>
-    <button>Ver Planos</button>
+  <!-- Seção Premium -->
+  <section class="section-premium">
+    <div>
+      <h1>Aproveite 1 mês grátis de Premium</h1>
+      <h2>Depois, pague somente R$ 21,90/mês. Cancele quando quiser.</h2>
+      <button>Comece Agora</button>
+      <button id="btn-Comece-agora">Comece Agora</button>
+      <button>Ver Planos</button>
+      <p>
+        <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições.</a>
+        O mês grátis não está disponível para usuários que já experimentaram o Premium.
+      </p>
+    </div>
   </section>
 
-</body>
 
+  
+</body>
 </html>
 
-    <p>
-        <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e condições.</a> 
-        O mês grátis não está disponível para usuários que já experimentaram o Premium.
-    </p>
-</section>
 
 <!-- Benefícios -->
 <section>
