--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
       <h2>Depois, pague somente R$ 21,90/mês. Cancele quando quiser.</h2>
       <button>Comece Agora</button>
       <button id="btn-Comece-agora">Comece Agora</button>
-      <button>Ver Planos</button>
+      <button id="btn-ver-planos">Ver Planos</button>
       <p>
         <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições.</a>
         O mês grátis não está disponível para usuários que já experimentaram o Premium.
