style: estilização da seção de planos e itens premium

--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 
   <!-- Cabeçalho -->
   <header>
-    <img class="spotify-logo" src="https://www.pngkey.com/png/full/190-1907978_spotify-logo-png-white-spotify-logo-white-transparent.png" alt="Spotify Logo">
+<img class="spotify-logo" src="https://upload.wikimedia.org/wikipedia/commons/2/26/Spotify_logo_with_text.svg" alt="Spotify Logo" width="150">
     <ul class="menu">
       <li>Premium</li>
       <li>Suporte</li>
@@ -41,44 +41,48 @@
   
 </body>
 </html>
+<!-- Benefícios -->
+<section class="section-why-premium">
+  <h2>Porque ser Premium?</h2>
+  <div class="premium-items">
+    <div>
+      <img src="https://i.scdn.co/image/ab671c3d0000f43009302fbaf6259b4c117c704f" alt="Modo Offline">
+      <h4>Modo offline.</h4>
+      <p>Ouça música onde estiver.</p>
+    </div>
+
+    <div>
+      <img src="https://i.scdn.co/image/ab671c3d0000f43098292b95d24a697c20df5137" alt="Ouça músicas sem anúncios.">
+      <h4>Ouça músicas sem anúncios.</h4>
+      <p>Curta música sem anúncios.</p>
+    </div>
+
+    <div>
+      <img src="https://i.scdn.co/image/ab671c3d0000f4306998d3ffd58aad6da6afdf67" alt="Ouça na ordem que quiser.">
+      <h4>Ouça na ordem que quiser.</h4>
+      <p>Qualquer música em qualquer ordem.</p>
+    </div>
+
+    <div>
+      <img src="https://content-tooling.spotifycdn.com/images/4a4fc24a-69b3-476b-b6d9-e7597cda526e_enhance_icon_(1).svg" alt="Qualidade de som superior">
+      <h4>Qualidade de som superior</h4>
+      <p>Sinta o som.</p>
+    </div>
+  </div>
+</section>
 
 
 <!-- Benefícios -->
-<section>
-    <h2>Porque ser Premium?</h2>
-
-    <div>
-        <img src="https://i.scdn.co/image/ab671c3d0000f43009302fbaf6259b4c117c704f" alt="Modo Offline">
-        <h4>Modo offline.</h4>
-        <p>Ouça música onde estiver.</p>
-    </div>
-
-    <div>
-        <img src="https://i.scdn.co/image/ab671c3d0000f43098292b95d24a697c20df5137" alt="Ouça músicas sem anúncios.">
-        <h4>Ouça músicas sem anúncios.</h4>
-        <p>Curta música sem anúncios.</p>
-    </div>
-
-    <div>
-        <img src="https://i.scdn.co/image/ab671c3d0000f4306998d3ffd58aad6da6afdf67" alt="Ouça na ordem que quiser.">
-        <h4>Ouça na ordem que quiser.</h4>
-        <p>Qualquer música em qualquer ordem.</p>
-    </div>
-
-    <div>
-        <img src="https://content-tooling.spotifycdn.com/images/4a4fc24a-69b3-476b-b6d9-e7597cda526e_enhance_icon_(1).svg" alt="Qualidade de som superior">
-        <h4>Qualidade de som superior</h4>
-        <p>Sinta o som.</p>
-    </div>
-</section>
 
 <!-- Planos -->
-<section style="background-color: #efefef;">
-    <h2>Escolha seu plano Premium</h2>
-    <h3>Ouça sem limites no seu celular, alto-falante e em outros dispositivos.</h3>
+<section class="section-chose-plan">
+  <div> 
+  <h2>Escolha seu plano Premium</h2>
+    <h3>Ouça sem limites no seu celular
+    , alto-falante e em outros dispositivos.</h3>
 
     <!-- Cartões de pagamento -->
-    <div>
+    <div class="credit-cards">
         <img src="https://content-tooling.spotifycdn.com/images/52f004ea-a49a-420b-8dca-14f5304ff4bf_visa.svg" alt="Visa">
         <img src="https://content-tooling.spotifycdn.com/images/3a865441-c6d4-4f92-a4be-6c96c0e96d1f_mastercard.svg" alt="Mastercard">
         <img src="https://content-tooling.spotifycdn.com/images/d4dd3e5b-f7d9-4cd0-80f1-b65f19c5e55c_amex.svg" alt="Amex">
@@ -87,7 +91,8 @@
     </div>
 
     <!-- Plano Individual -->
-    <div>
+   <section class="section-plan">
+    <div class="plan-style">
         <p>1 Mês grátis ao assinar</p>
         <p>Pagamento único disponível</p>
         <h3>Individual</h3>
@@ -108,7 +113,7 @@
     </div>
 
     <!-- Plano Duo -->
-    <div>
+    <div class="plan-style">
         <p>1 Mês grátis ao assinar</p>
         <p>Pagamento único disponível</p>
         <h3>Duo</h3>
@@ -128,7 +133,7 @@
     </div>
 
     <!-- Plano Família -->
-    <div>
+    <div class="plan-style">
         <p>1 Mês grátis ao assinar</p>
         <p>Pagamento único disponível</p>
         <h3>Família</h3>
@@ -150,7 +155,7 @@
     </div>
 
     <!-- Plano Universitário -->
-    <div>
+    <div class="plan-style">
         <p>1 Mês grátis ao assinar</p>
         <p>Pagamento único disponível</p>
         <h3>Universitário</h3>
@@ -172,6 +177,7 @@
     </div>
 </section>
 
+  </div>
 <!-- Rodapé -->
 <footer style="background-color: black; padding: 20px;">
     <div>
