ajusta alinhamento dos botões 'comece agora' nos planos usando flexbox

--- a/index.html
+++ b/index.html
@@ -93,10 +93,10 @@
     <!-- Plano Individual -->
    <section class="section-plan">
     <div class="plan-style">
-        <p>1 Mês grátis ao assinar</p>
-        <p>Pagamento único disponível</p>
+        <p class="free-month">1 Mês grátis ao assinar</p>
+        <p class="one-time-payment">Pagamento único disponível</p>
         <h3>Individual</h3>
-        <p>R$21,90/mês após o período da oferta</p>
+        <p class="price">R$21,90/mês após o período da oferta</p>
         <p>1 Conta</p>
         <hr>
         <ol>
@@ -105,17 +105,18 @@
             <li>Ouça músicas na ordem que quiser</li>
             <li>Faça um plano pré-pago ou assinatura</li>
         </ol>
-        <button>Comece Agora</button>
-        <p>
-            <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições</a>. 
+
+        <button class="btn-comece-agora">Comece Agora</button>
+        
+         <p class="conditions"><a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições</a>. 
             O mês grátis não está disponível para usuários que já experimentaram o Premium.
         </p>
     </div>
 
     <!-- Plano Duo -->
     <div class="plan-style">
-        <p>1 Mês grátis ao assinar</p>
-        <p>Pagamento único disponível</p>
+        <p class="free-month">1 Mês grátis ao assinar</p>
+        <p class="one-time-payment">Pagamento único disponível</p>
         <h3>Duo</h3>
         <p>R$27,90/mês após o período da oferta</p>
         <p>2 Contas</p>
@@ -125,8 +126,8 @@
             <li>Músicas sem anúncios, no modo offline e na ordem que você quiser</li>
             <li>Faça um plano pré-pago ou assinatura</li>
         </ol>
-        <button>Comece Agora</button>
-        <p>
+        <button class="btn-comece-agora">Comece Agora</button>
+        <p class="conditions">
             <a href="https://www.spotify.com/br-pt/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições</a>. 
             O mês grátis não está disponível para usuários que já usaram o Premium.
         </p>
@@ -134,8 +135,8 @@
 
     <!-- Plano Família -->
     <div class="plan-style">
-        <p>1 Mês grátis ao assinar</p>
-        <p>Pagamento único disponível</p>
+        <p class="free-month">1 Mês grátis ao assinar</p>
+        <p class="one-time-payment">Pagamento único disponível</p>
         <h3>Família</h3>
         <p>R$34,90/mês após o período da oferta</p>
         <p>Até 6 Contas</p>
@@ -147,17 +148,18 @@
             <li>Spotify Kids: um app separado para crianças</li>
             <li>Faça um plano pré-pago ou assinatura</li>
         </ol>
-        <button>Comece Agora</button>
-        <p>
+        <button class="btn-comece-agora">Comece Agora</button>
+        <p class="conditions">
             <a href="https://www.spotify.com/br-pt/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições</a>. 
             O mês grátis não está disponível para usuários que já usaram o Premium.
         </p>
     </div>
 
-    <!-- Plano Universitário -->
-    <div class="plan-style">
-        <p>1 Mês grátis ao assinar</p>
-        <p>Pagamento único disponível</p>
+   <!-- Plano Universitário -->
+<div class="plan-style">
+
+        <p class="free-month">1 Mês grátis ao assinar</p>
+        <p class="one-time-payment">Pagamento único disponível</p>
         <h3>Universitário</h3>
         <p>R$11,90/mês após o período da oferta</p>
         <p>1 Conta</p>
@@ -168,8 +170,8 @@
             <li>Ouça em qualquer lugar, até quando estiver offline</li>
             <li>Ouça músicas na hora que quiser</li>
         </ol>
-        <button>Comece Agora</button>
-        <p>
+        <button class="btn-comece-agora">Comece Agora</button>
+        <p class="conditions">
             Oferta disponível apenas para estudantes de instituições credenciadas. 
             O mês grátis não estará disponível para usuários que já experimentaram o Premium. 
             <a href="https://www.spotify.com/br/legal/premium-promotional-offer-terms/">Sujeito a Termos e Condições</a>.
