--- a/index.html
+++ b/index.html
@@ -5,6 +5,17 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Spotify Premium</title>
+
+  <!-- Seu arquivo de estilo -->
+  <link rel="stylesheet" href="style.css">
+
+  <!-- Bootstrap Icons -->
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet">
+</head>
+
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Spotify Premium</title>
   <link rel="stylesheet" href="style.css">
 </head>
 
@@ -27,7 +38,6 @@
     <div>
       <h1>Aproveite 1 mês grátis de Premium</h1>
       <h2>Depois, pague somente R$ 21,90/mês. Cancele quando quiser.</h2>
-      <button>Comece Agora</button>
       <button id="btn-Comece-agora">Comece Agora</button>
       <button id="btn-ver-planos">Ver Planos</button>
       <p>
@@ -181,7 +191,7 @@
 
   </div>
 <!-- Rodapé -->
-<footer style="background-color: black; padding: 20px;">
+<footer padding: 20px;">
     <div>
         <img width="150px" src="https://www.pngkey.com/png/full/190-1907978_spotify-logo-png-white-spotify-logo-white-transparent.png" alt="Spotify Logo">
     </div>
@@ -211,7 +221,7 @@
             <li><a href="#" style="color: white; text-decoration: none;">Aplicativo Móvel Grátis</a></li>
         </ul>
     </div>
-          <div style="color: white; font-size: 50px;">
+          <div>
           <i class="bi bi-instagram"></i>
           <i class="bi bi-twitter-x"></i>
           <i class="bi bi-facebook"></i>
